--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ subprojects {
 
     dependencies {
         testImplementation 'com.github.hyperskill:hs-test:release-SNAPSHOT'
+        implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.0")
     }
 
     configurations.all {
